Fix a miniscule vertical overflow in projects section.

--- a/style.css
+++ b/style.css
@@ -175,6 +175,7 @@ header img {
     ". project-3 project-3 project-3 project-3 project-3 . . . ."
     ". . . . project-4 project-4 project-4 project-4 project-4 .";
     row-gap: 2rem;
+    padding-bottom: 1rem;
 }
 
 div.project-1 {
